--- a/css/fileUpload.css
+++ b/css/fileUpload.css
@@ -1,8 +1,9 @@
 .fileUpload
 {
     position: relative;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
+
 .fileUpload input.upload
 {
     position: absolute;
@@ -11,6 +12,7 @@
     margin: 0;
     padding: 0;
     font-size: 20px;
+    cursor: pointer;
     opacity: 0;
     filter: alpha(opacity=0);
 }
