--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -282,6 +282,11 @@
         float: left;
         width: 100%;
     }
+
+    #promotional-links
+    {
+        margin-top: 100px;
+    }
 }
 
 @media only screen and (min-width: 630px) and (max-width: 1200px) {
