--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -247,7 +247,7 @@
     }
 }
 
-@media only screen and (min-width: 0px) and (max-width: 1200px) {
+@media only screen and (min-width: 0px) and (max-width: 1199px) {
     .img1
     {
         width: 100%;
@@ -286,6 +286,16 @@
     #promotional-links
     {
         margin-top: 100px;
+    }
+
+
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 2000px) {
+
+    #menu-group
+    {
+        position: fixed;
     }
 }
 
