--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -297,6 +297,11 @@
     {
         position: fixed;
     }
+
+    #ActionCentre
+    {
+        position: fixed;
+    }
 }
 
 @media only screen and (min-width: 630px) and (max-width: 1200px) {
