--- a/css/pages/ongoingChats.css
+++ b/css/pages/ongoingChats.css
@@ -69,12 +69,6 @@
 
 #chatSearchModal
 {
-    background-color: #ffffff;
-    position: absolute;
-    margin-top: 5px;
-    border-radius: 5px;
-    z-index: 1;
-    background-color: #f5f5f5;
     display: none;
 }
 #chatSearch
@@ -86,4 +80,11 @@
 #chatSearchResultsModal
 {
     width: 200px;
+}
+
+#chatSearchText
+{
+    height: 200px;
+    overflow: auto;
+    display: none;
 }
