--- a/css/pages/diary.css
+++ b/css/pages/diary.css
@@ -83,7 +83,7 @@
 
 #PostsDate
 {
-    background-color: darkblue;
+    background-color: #002166;
     color: white;
     width: 100px;
     padding-left: 30px;
