--- a/css/pages/soccerSpace.css
+++ b/css/pages/soccerSpace.css
@@ -74,3 +74,56 @@ a
     margin-left: 67.5%;
     margin-top: 5%;
 }
+
+.microdata-hide
+{
+    display: none;
+}
+
+.upcoming-fixtures
+{
+    font-family: "Segoe UI", "Segoe WP", "Helvetica Neue", 'RobotoRegular', sans-serif;
+    font-size: x-large;
+    list-style-type: none;
+}
+
+.teamSchedule
+{
+    color: #ffffff;
+    background-color: #000033;
+}
+
+.teamSchedule h2
+{
+    color: #ffffff;
+    background-color: #003300;
+}
+
+.newsLink
+{
+    color: #000033;
+    background-color:whitesmoke;
+}
+
+.newsLink:hover
+{
+    color: #ffffff;
+    background-color:#000033;
+}
+
+.title
+{
+    text-align: center;
+}
+
+.searchResult {
+    color: white;
+    background-color:whitesmoke;
+    color: #000033;
+}
+
+.searchResult:hover
+{
+    color: white;
+    background-color:#003163;
+}
