--- a/css/pages/liveSoccer.css
+++ b/css/pages/liveSoccer.css
@@ -24,3 +24,11 @@
     color: white;
     background-color:#003163;
 }
+
+.filters
+{
+    color: #003300;
+    font-size: 11px;
+    font-family:"Segoe UI", "Segoe WP", "Helvetica Neue", 'RobotoRegular', sans-serif;
+}
+
