--- a/css/pages/soccerPredictor.css
+++ b/css/pages/soccerPredictor.css
@@ -26,3 +26,9 @@
     color: white;
     background-color:#003163;
 }
+
+.friendPredict
+{
+    font-family: "Segoe UI", "Segoe WP", "Helvetica Neue", 'RobotoRegular', sans-serif;
+
+}
