--- a/css/pages/soccerPredictor.css
+++ b/css/pages/soccerPredictor.css
@@ -9,6 +9,14 @@
     height: 100px;
 }
 
+#smallDiv
+{
+    margin-top: 200px;
+}
+#ActionCentre
+{
+    border-left: 1px solid #f0f0f0;
+}
 
 .searchResult
 {
